[package]
name = "trello-todo"
version = "0.1.0"
authors = ["Eric Stolten <stoltene2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.1"
log = "0.4.8"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = {version = "1.0.104", features = ["derive"]}
serde_json = "1.0.48"
